--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 build/
 .cache/
 /compile_commands.json
+cmake/CMakeCache.txt
+cmake/CMakeFiles/
+cmake/FindOpus.cmake
+cmake/Makefile
+cmake/cmake_install.cmake
